Finished Main Menu/Chessboard
Finished the main menu and the chess board. Next Step is to create
pieces

--- a/122_PA9/122_PA9/122_PA9.vcxproj
+++ b/122_PA9/122_PA9/122_PA9.vcxproj
@@ -150,6 +150,11 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ChessPieces.hpp" />
+    <ClInclude Include="Game.hpp" />
+    <ClInclude Include="Menu.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
