--- a/122_PA9/122_PA9/122_PA9.vcxproj.filters
+++ b/122_PA9/122_PA9/122_PA9.vcxproj.filters
@@ -29,5 +29,26 @@
     <ClInclude Include="ChessPieces.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ChessBoard.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Kings.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Queens.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Pawns.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Bishops.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Rookes.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Horses.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
